2003-06-28  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* main/vlad.cpp :
	* lib/Makefile.in :
	* main/Makefile :
	* main/operation.l :
	* main/operation.y :
	* main/parser.h :
	* main/program.l :
	* main/program.y :
	* lib/operation.l :
	* lib/operation.y :
	* lib/parser.h :
	* lib/program.l :
	* lib/program.y :

	  - Now parser is not part of the library. Moved parser and scanner
	    into main directory.

2003-05-14  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* rules.mk :
	* lib/Makefile.in :
	* main/Makefile.in :

	  - Added install and uninstall rules.

2003-05-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* rules.mk :
	* lib/Makefile.in :

	  - Linked libsmodels.so to libvlad.so.

	  - Changed parameter expansions (${var%%pattern}) into a cut command.
	    This should keep non-posix compiant shells happy.

	* configure.ac :

	  - Added checks for compiler -fPIC and -shared options.

	  - Added an --enable-static option to link the executable statically.

	* rules.mk :
	* lib/Makefile.in :
	* main/Makefile.in :

	  - Renamed phony rules: took out the "copy-" prefix.

	  - Now creates a shared library (where supported) libvlad.so.

	  - By default, the executable will be linked againts the shared lib,
	    unless --enable-static is specified, in which case, it will be
	    linked against the static lib.

2003-05-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* main/Makefile.in :

	  - Library moved from dist/lib/vlad to dist/lib.

	  - Cleanup.

	* Makefile.in :
	* configure :
	* configure.ac :
	* main/Makefile.in :
	* common/* :
	* kb/* :
	* parser/* :

	  - Moved all sources to the new lib directory to combine all
	    objects into one library libvlad.

2003-05-06  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/Makefile.in :
	* kb/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Now package will build on systems without ln -s or even ln.
